# iSpeak

./: .dockerignore  README.md  alias.sh  fly.toml
.devcontainer/: Dockerfile  devcontainer.json
POC/: requirements.txt  run_poc.py
app/: .env.local  .gitignore  Dockerfile  example.env  fly.toml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: +error.svelte  app.d.ts  hooks.server.ts
app/src/lib/brand/: Brand.svelte
app/src/lib/server/: langchain.ts  transcriber.ts
app/src/routes/: +layout.svelte  +layout.ts
app/src/routes/(app)/: +layout.svelte  +layout.ts
app/src/routes/(protected)/: +layout.server.ts  +layout.svelte
backend/: Dockerfile  README.md  main.py  pyproject.toml
notebooks/: LangChain.ipynb  LangChain_Gemini.ipynb  TextToSpeech_WhisperSpeech.ipynb  main.ipynb
other/: PhonemeAnalysis.ipynb
other/POC/: model_output.txt  run_poc.py
other/notebooks/: LangChain_Gemini_Memory_Management.ipynb  main.ipynb
server/: .env  .gitignore  fly.toml  main.py  pyproject.toml
server/data/: audio.ogg13799.ogx  audio.ogg27708.ogx  audio.ogg38162.ogx  audio.ogg39546.ogx  audio.ogg47702.ogx  audio.ogg6773.ogx  audio.ogg71024.ogx  audio.ogg73531.ogx  audio.ogg7370.ogx  audio.ogg77596.ogx  audio.ogg78667.ogx  audio.ogg83853.ogx  audio.ogg95022.ogx  audio.ogg96001.ogx
server/server/: __init__.py
server/server/core/: feedback.py  gen.py
server/tests/: test_core.py
supabase/: config.toml
supabase/migrations/: 20240803101008_profiles.sql  20240810120229_courses.sql  20240916155807_results.sql
web/: package-lock.json
(+80 files in other folders)
