[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kival Mahadew <kivalm@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.112.0"}
transformers = {extras = ["torch"], version = "^4.44.0"}
phonemizer = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
