[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Kival Mahadew <kivalm@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.114.0"}
torch = "^2.4.1"
transformers = "^4.44.2"
phonemizer = "^3.3.0"
nltk = "^3.9.1"
langchain-anthropic = "^0.1.23"

[tool.poetry.group.test.dependencies]  
pytest-randomly = "^3.15.0"  
pytest = "^8.2.0"  

[tool.poetry.group.dev.dependencies]  
ruff = "^0.4.4"  
black = "^24.4.2"  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
